@@ -147,6 +147,17 @@ The paramaters for enviromental variables are as follows:
 
 additional options are easily added in options.c.
 	
+udhcpc will seed its random number generator (used for generating xid's)
+by reading /dev/urandom. If you have a lot of embedded systems on the same
+network, with no entropy, you can either seed /dev/urandom by a method of
+your own, or doing the following on startup:
+
+ifconfig eth0 > /dev/urandom
+
+in order to seed /dev/urandom with some data (mac address) unique to your
+system. If reading /dev/urandom fails, udhcpc will fall back to its old
+behavior of seeding with time(0).
+
 udhcpc also responds to SIGUSR1 and SIGUSR2. SIGUSR1 will force a renew state,
 and SIGUSR2 will force a release of the current lease, and cause udhcpc to
 go into an inactive state (until it is killed, or receives a SIGUSR1). You do
